{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 632,
  "lineage": "3155a26e-ec2b-a54c-0e80-cb7304c42539",
  "resources": [
    {
      "module": "module.ec2_bastion",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03fae5a15ddd13b48",
            "arn": "arn:aws:ec2:us-east-1:203918842945:elastic-ip/eipalloc-03fae5a15ddd13b48",
            "association_id": "eipassoc-0709b214b85826105",
            "domain": "vpc",
            "id": "eipalloc-03fae5a15ddd13b48",
            "instance": "i-0fd575a23454740c3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0df32c3d8d9fc7db2",
            "private_dns": "ip-10-0-6-199.ec2.internal",
            "private_ip": "10.0.6.199",
            "public_dns": "ec2-13-218-29-0.compute-1.amazonaws.com",
            "public_ip": "13.218.29.0",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "public",
              "Name": "vitality-dev-bastion-public",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "vitality-dev-bastion-public",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aws_key_pair.aws_key_pair.generated",
            "module.aws_key_pair.aws_key_pair.imported",
            "module.aws_key_pair.tls_private_key.default",
            "module.ec2_bastion.aws_iam_instance_profile.default",
            "module.ec2_bastion.aws_iam_role.default",
            "module.ec2_bastion.aws_instance.default",
            "module.ec2_bastion.data.aws_ami.default",
            "module.ec2_bastion.data.aws_iam_policy_document.default",
            "module.ec2_bastion.module.security_group.aws_security_group.default",
            "module.ec2_bastion.module.security_group.aws_security_group_rule.default",
            "module.ec2_bastion.module.security_group.data.aws_security_group.external",
            "module.public_private_subnets.aws_subnet.public",
            "module.public_private_subnets.data.aws_availability_zones.default",
            "module.public_private_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f6832b69407e9746",
            "arn": "arn:aws:ec2:us-east-1:203918842945:instance/i-0fd575a23454740c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "vitality-dev-bastion-public",
            "id": "i-0fd575a23454740c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vitality-dev-app-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0df32c3d8d9fc7db2",
            "private_dns": "ip-10-0-6-199.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.6.199",
            "public_dns": "ec2-54-146-157-16.compute-1.amazonaws.com",
            "public_ip": "54.146.157.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 0,
                "kms_key_id": "arn:aws:kms:us-east-1:203918842945:key/2b98fc46-d86d-4318-a26a-e8c68e0a7f32",
                "throughput": 0,
                "volume_id": "vol-09a1a57ba35336be8",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f46822cfaf7d5ee9",
            "tags": {
              "Attributes": "public",
              "Name": "vitality-dev-bastion-public",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "vitality-dev-bastion-public",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02fea1576a0f9efad",
              "sg-062fbcecbe585dc83"
            ]
          },
          "dependencies": [
            "module.aws_key_pair.aws_key_pair.generated",
            "module.aws_key_pair.aws_key_pair.imported",
            "module.aws_key_pair.tls_private_key.default",
            "module.ec2_bastion.aws_iam_instance_profile.default",
            "module.ec2_bastion.aws_iam_role.default",
            "module.ec2_bastion.data.aws_ami.default",
            "module.ec2_bastion.data.aws_iam_policy_document.default",
            "module.ec2_bastion.module.security_group.aws_security_group.default",
            "module.ec2_bastion.module.security_group.aws_security_group_rule.default",
            "module.ec2_bastion.module.security_group.data.aws_security_group.external",
            "module.public_private_subnets.aws_subnet.public",
            "module.public_private_subnets.data.aws_availability_zones.default",
            "module.public_private_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_bastion.module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:security-group/sg-062fbcecbe585dc83",
            "description": "Bastion host security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-062fbcecbe585dc83",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all inbound to SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vitality-dev-bastion-public",
            "name_prefix": "",
            "owner_id": "203918842945",
            "revoke_rules_on_delete": false,
            "tags": {
              "Attributes": "public",
              "Name": "vitality-dev-bastion-public",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "vitality-dev-bastion-public",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-07681cd3054d9f772"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_bastion.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress--1-0-0-9c87e5e1ed040a443ce1ac8e6d6cf159",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-24156230",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-062fbcecbe585dc83",
            "security_group_rule_id": "sgr-0780c3634d91bda92",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_bastion.module.security_group.aws_security_group.default",
            "module.ec2_bastion.module.security_group.data.aws_security_group.external",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "ingress-tcp-22-22-423a6669f6ad4c36d49b47a12e248189",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all inbound to SSH",
            "from_port": 22,
            "id": "sgrule-1222561486",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-062fbcecbe585dc83",
            "security_group_rule_id": "sgr-064df6c23ea81c2fc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_bastion.module.security_group.aws_security_group.default",
            "module.ec2_bastion.module.security_group.data.aws_security_group.external",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.private_only_subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02cbcf20c91d28ea5",
            "arn": "arn:aws:ec2:us-east-1:203918842945:elastic-ip/eipalloc-02cbcf20c91d28ea5",
            "association_id": "eipassoc-05c69c9007bf429aa",
            "domain": "vpc",
            "id": "eipalloc-02cbcf20c91d28ea5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-039b35cf6ba0d0419",
            "private_dns": "ip-10-0-22-137.ec2.internal",
            "private_ip": "10.0.22.137",
            "public_dns": "ec2-98-85-115-123.compute-1.amazonaws.com",
            "public_ip": "98.85.115.123",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "private-only-nat",
              "Name": "vitality-dev-app-private-only-nat-use1c",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "private-only-nat",
              "Name": "vitality-dev-app-private-only-nat-use1c",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "vpc": true
          },
          "dependencies": [
            "module.private_only_subnets.data.aws_availability_zones.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-003ca5ea21cfeaa09",
            "arn": "arn:aws:ec2:us-east-1:203918842945:elastic-ip/eipalloc-003ca5ea21cfeaa09",
            "association_id": "eipassoc-00cf320a2207f1736",
            "domain": "vpc",
            "id": "eipalloc-003ca5ea21cfeaa09",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e79ea5551ad5ac31",
            "private_dns": "ip-10-0-23-185.ec2.internal",
            "private_ip": "10.0.23.185",
            "public_dns": "ec2-52-21-53-96.compute-1.amazonaws.com",
            "public_ip": "52.21.53.96",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "private-only-nat",
              "Name": "vitality-dev-app-private-only-nat-use1d",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "private-only-nat",
              "Name": "vitality-dev-app-private-only-nat-use1d",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "vpc": true
          },
          "dependencies": [
            "module.private_only_subnets.data.aws_availability_zones.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_only_subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02cbcf20c91d28ea5",
            "association_id": "eipassoc-05c69c9007bf429aa",
            "connectivity_type": "public",
            "id": "nat-09fe3371106bcb2c6",
            "network_interface_id": "eni-039b35cf6ba0d0419",
            "private_ip": "10.0.22.137",
            "public_ip": "98.85.115.123",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e4a2c5d8b76ced7c",
            "tags": {
              "Attributes": "private-only-nat",
              "Name": "vitality-dev-app-private-only-nat-use1c",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "private-only-nat",
              "Name": "vitality-dev-app-private-only-nat-use1c",
              "Namespace": "vitality",
              "Stage": "dev"
            }
          },
          "dependencies": [
            "module.private_only_subnets.aws_eip.default",
            "module.private_only_subnets.aws_eip_association.nat_instance",
            "module.private_only_subnets.aws_instance.nat_instance",
            "module.private_only_subnets.aws_security_group.nat_instance",
            "module.private_only_subnets.aws_subnet.public",
            "module.private_only_subnets.data.aws_ami.nat_instance",
            "module.private_only_subnets.data.aws_availability_zones.default",
            "module.private_only_subnets.data.aws_eip.nat",
            "module.private_only_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-003ca5ea21cfeaa09",
            "association_id": "eipassoc-00cf320a2207f1736",
            "connectivity_type": "public",
            "id": "nat-025c160dfdb0e86ba",
            "network_interface_id": "eni-0e79ea5551ad5ac31",
            "private_ip": "10.0.23.185",
            "public_ip": "52.21.53.96",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0226c9efca2849ff7",
            "tags": {
              "Attributes": "private-only-nat",
              "Name": "vitality-dev-app-private-only-nat-use1d",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "private-only-nat",
              "Name": "vitality-dev-app-private-only-nat-use1d",
              "Namespace": "vitality",
              "Stage": "dev"
            }
          },
          "dependencies": [
            "module.private_only_subnets.aws_eip.default",
            "module.private_only_subnets.aws_eip_association.nat_instance",
            "module.private_only_subnets.aws_instance.nat_instance",
            "module.private_only_subnets.aws_security_group.nat_instance",
            "module.private_only_subnets.aws_subnet.public",
            "module.private_only_subnets.data.aws_ami.nat_instance",
            "module.private_only_subnets.data.aws_availability_zones.default",
            "module.private_only_subnets.data.aws_eip.nat",
            "module.private_only_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.private_only_subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:network-acl/acl-0e15a5de8584f637c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e15a5de8584f637c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "203918842945",
            "subnet_ids": [
              "subnet-04ec5a322431e1d2e",
              "subnet-0c885fe6233e71373"
            ],
            "tags": {
              "Attributes": "private-only-private",
              "Name": "vitality-dev-app-private-only-private",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "private-only-private",
              "Name": "vitality-dev-app-private-only-private",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "vpc_id": "vpc-07681cd3054d9f772"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_only_subnets.aws_subnet.private",
            "module.private_only_subnets.data.aws_availability_zones.default",
            "module.private_only_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.private_only_subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:network-acl/acl-0de62a0f300b0aa3f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0de62a0f300b0aa3f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "203918842945",
            "subnet_ids": [
              "subnet-0226c9efca2849ff7",
              "subnet-0e4a2c5d8b76ced7c"
            ],
            "tags": {
              "Attributes": "private-only-public",
              "Name": "vitality-dev-app-private-only-public",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "private-only-public",
              "Name": "vitality-dev-app-private-only-public",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "vpc_id": "vpc-07681cd3054d9f772"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_only_subnets.aws_subnet.public",
            "module.private_only_subnets.data.aws_availability_zones.default",
            "module.private_only_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.private_only_subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private4_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3142965789",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e15a5de8584f637c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_only_subnets.aws_network_acl.private",
            "module.private_only_subnets.aws_subnet.private",
            "module.private_only_subnets.data.aws_availability_zones.default",
            "module.private_only_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.private_only_subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private4_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-946076318",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e15a5de8584f637c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_only_subnets.aws_network_acl.private",
            "module.private_only_subnets.aws_subnet.private",
            "module.private_only_subnets.data.aws_availability_zones.default",
            "module.private_only_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.private_only_subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public4_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-999930347",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0de62a0f300b0aa3f",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_only_subnets.aws_network_acl.public",
            "module.private_only_subnets.aws_subnet.public",
            "module.private_only_subnets.data.aws_availability_zones.default",
            "module.private_only_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.private_only_subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public4_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1815962068",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0de62a0f300b0aa3f",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_only_subnets.aws_network_acl.public",
            "module.private_only_subnets.aws_subnet.public",
            "module.private_only_subnets.data.aws_availability_zones.default",
            "module.private_only_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.private_only_subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a31536b24ed052301080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09fe3371106bcb2c6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a31536b24ed05230",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_only_subnets.aws_eip.default",
            "module.private_only_subnets.aws_eip_association.nat_instance",
            "module.private_only_subnets.aws_instance.nat_instance",
            "module.private_only_subnets.aws_nat_gateway.default",
            "module.private_only_subnets.aws_route_table.private",
            "module.private_only_subnets.aws_security_group.nat_instance",
            "module.private_only_subnets.aws_subnet.public",
            "module.private_only_subnets.data.aws_ami.nat_instance",
            "module.private_only_subnets.data.aws_availability_zones.default",
            "module.private_only_subnets.data.aws_eip.nat",
            "module.private_only_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-022f34262761bd6281080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-025c160dfdb0e86ba",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-022f34262761bd628",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_only_subnets.aws_eip.default",
            "module.private_only_subnets.aws_eip_association.nat_instance",
            "module.private_only_subnets.aws_instance.nat_instance",
            "module.private_only_subnets.aws_nat_gateway.default",
            "module.private_only_subnets.aws_route_table.private",
            "module.private_only_subnets.aws_security_group.nat_instance",
            "module.private_only_subnets.aws_subnet.public",
            "module.private_only_subnets.data.aws_ami.nat_instance",
            "module.private_only_subnets.data.aws_availability_zones.default",
            "module.private_only_subnets.data.aws_eip.nat",
            "module.private_only_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.private_only_subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e9ea34bd18152efa",
            "id": "r-rtb-02f87b87d510fb6c91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02f87b87d510fb6c9",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_only_subnets.aws_route_table.public",
            "module.private_only_subnets.data.aws_availability_zones.default",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.private_only_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:route-table/rtb-0a31536b24ed05230",
            "id": "rtb-0a31536b24ed05230",
            "owner_id": "203918842945",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09fe3371106bcb2c6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "private-only-private",
              "Name": "vitality-dev-app-private-only-private-use1c",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "private-only-private",
              "Name": "vitality-dev-app-private-only-private-use1c",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-07681cd3054d9f772"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_only_subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:route-table/rtb-022f34262761bd628",
            "id": "rtb-022f34262761bd628",
            "owner_id": "203918842945",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-025c160dfdb0e86ba",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "private-only-private",
              "Name": "vitality-dev-app-private-only-private-use1d",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "private-only-private",
              "Name": "vitality-dev-app-private-only-private-use1d",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-07681cd3054d9f772"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_only_subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.private_only_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:route-table/rtb-02f87b87d510fb6c9",
            "id": "rtb-02f87b87d510fb6c9",
            "owner_id": "203918842945",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e9ea34bd18152efa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "private-only-public",
              "Name": "vitality-dev-app-private-only-public",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "private-only-public",
              "Name": "vitality-dev-app-private-only-public",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-07681cd3054d9f772"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_only_subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.private_only_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05602f49bcca2f66a",
            "route_table_id": "rtb-0a31536b24ed05230",
            "subnet_id": "subnet-04ec5a322431e1d2e"
          },
          "dependencies": [
            "module.private_only_subnets.aws_route_table.private",
            "module.private_only_subnets.aws_subnet.private",
            "module.private_only_subnets.data.aws_availability_zones.default",
            "module.private_only_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e28bd129a4d60d89",
            "route_table_id": "rtb-022f34262761bd628",
            "subnet_id": "subnet-0c885fe6233e71373"
          },
          "dependencies": [
            "module.private_only_subnets.aws_route_table.private",
            "module.private_only_subnets.aws_subnet.private",
            "module.private_only_subnets.data.aws_availability_zones.default",
            "module.private_only_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.private_only_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1d7d519e8f34f03",
            "route_table_id": "rtb-02f87b87d510fb6c9",
            "subnet_id": "subnet-0e4a2c5d8b76ced7c"
          },
          "dependencies": [
            "module.private_only_subnets.aws_route_table.public",
            "module.private_only_subnets.aws_subnet.public",
            "module.private_only_subnets.data.aws_availability_zones.default",
            "module.private_only_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023adc9a711bd6639",
            "route_table_id": "rtb-02f87b87d510fb6c9",
            "subnet_id": "subnet-0226c9efca2849ff7"
          },
          "dependencies": [
            "module.private_only_subnets.aws_route_table.public",
            "module.private_only_subnets.aws_subnet.public",
            "module.private_only_subnets.data.aws_availability_zones.default",
            "module.private_only_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.private_only_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:subnet/subnet-04ec5a322431e1d2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.16.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ec5a322431e1d2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "203918842945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private-only-private",
              "Name": "vitality-dev-app-private-only-private-use1c",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "private-only-private",
              "Name": "vitality-dev-app-private-only-private-use1c",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-07681cd3054d9f772"
          },
          "dependencies": [
            "module.private_only_subnets.data.aws_availability_zones.default",
            "module.private_only_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:subnet/subnet-0c885fe6233e71373",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.17.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c885fe6233e71373",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "203918842945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private-only-private",
              "Name": "vitality-dev-app-private-only-private-use1d",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "private-only-private",
              "Name": "vitality-dev-app-private-only-private-use1d",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-07681cd3054d9f772"
          },
          "dependencies": [
            "module.private_only_subnets.data.aws_availability_zones.default",
            "module.private_only_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.private_only_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:subnet/subnet-0e4a2c5d8b76ced7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4a2c5d8b76ced7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "203918842945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private-only-public",
              "Name": "vitality-dev-app-private-only-public-use1c",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "private-only-public",
              "Name": "vitality-dev-app-private-only-public-use1c",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-07681cd3054d9f772"
          },
          "dependencies": [
            "module.private_only_subnets.data.aws_availability_zones.default",
            "module.private_only_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:subnet/subnet-0226c9efca2849ff7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0226c9efca2849ff7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "203918842945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private-only-public",
              "Name": "vitality-dev-app-private-only-public-use1d",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "private-only-public",
              "Name": "vitality-dev-app-private-only-public-use1d",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-07681cd3054d9f772"
          },
          "dependencies": [
            "module.private_only_subnets.data.aws_availability_zones.default",
            "module.private_only_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_private_subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-071eed9b27b7591f5",
            "arn": "arn:aws:ec2:us-east-1:203918842945:elastic-ip/eipalloc-071eed9b27b7591f5",
            "association_id": "eipassoc-026d73653965c65dd",
            "domain": "vpc",
            "id": "eipalloc-071eed9b27b7591f5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0498937faf781e473",
            "private_dns": "ip-10-0-6-134.ec2.internal",
            "private_ip": "10.0.6.134",
            "public_dns": "ec2-98-83-21-204.compute-1.amazonaws.com",
            "public_ip": "98.83.21.204",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "public-private-nat",
              "Name": "vitality-dev-app-public-private-nat-use1a",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "public-private-nat",
              "Name": "vitality-dev-app-public-private-nat-use1a",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "vpc": true
          },
          "dependencies": [
            "module.public_private_subnets.data.aws_availability_zones.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f78d4efb31190f5",
            "arn": "arn:aws:ec2:us-east-1:203918842945:elastic-ip/eipalloc-07f78d4efb31190f5",
            "association_id": "eipassoc-0fec2154a689c19a3",
            "domain": "vpc",
            "id": "eipalloc-07f78d4efb31190f5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02f93b77b90ea4ebe",
            "private_dns": "ip-10-0-7-17.ec2.internal",
            "private_ip": "10.0.7.17",
            "public_dns": "ec2-34-202-35-241.compute-1.amazonaws.com",
            "public_ip": "34.202.35.241",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "public-private-nat",
              "Name": "vitality-dev-app-public-private-nat-use1b",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "public-private-nat",
              "Name": "vitality-dev-app-public-private-nat-use1b",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "vpc": true
          },
          "dependencies": [
            "module.public_private_subnets.data.aws_availability_zones.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_private_subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-071eed9b27b7591f5",
            "association_id": "eipassoc-026d73653965c65dd",
            "connectivity_type": "public",
            "id": "nat-033fb51789dd0f44e",
            "network_interface_id": "eni-0498937faf781e473",
            "private_ip": "10.0.6.134",
            "public_ip": "98.83.21.204",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f46822cfaf7d5ee9",
            "tags": {
              "Attributes": "public-private-nat",
              "Name": "vitality-dev-app-public-private-nat-use1a",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "public-private-nat",
              "Name": "vitality-dev-app-public-private-nat-use1a",
              "Namespace": "vitality",
              "Stage": "dev"
            }
          },
          "dependencies": [
            "module.public_private_subnets.aws_eip.default",
            "module.public_private_subnets.aws_eip_association.nat_instance",
            "module.public_private_subnets.aws_instance.nat_instance",
            "module.public_private_subnets.aws_security_group.nat_instance",
            "module.public_private_subnets.aws_subnet.public",
            "module.public_private_subnets.data.aws_ami.nat_instance",
            "module.public_private_subnets.data.aws_availability_zones.default",
            "module.public_private_subnets.data.aws_eip.nat",
            "module.public_private_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f78d4efb31190f5",
            "association_id": "eipassoc-0fec2154a689c19a3",
            "connectivity_type": "public",
            "id": "nat-0485fd3999e1c7d5e",
            "network_interface_id": "eni-02f93b77b90ea4ebe",
            "private_ip": "10.0.7.17",
            "public_ip": "34.202.35.241",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08db065a30264ca79",
            "tags": {
              "Attributes": "public-private-nat",
              "Name": "vitality-dev-app-public-private-nat-use1b",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "public-private-nat",
              "Name": "vitality-dev-app-public-private-nat-use1b",
              "Namespace": "vitality",
              "Stage": "dev"
            }
          },
          "dependencies": [
            "module.public_private_subnets.aws_eip.default",
            "module.public_private_subnets.aws_eip_association.nat_instance",
            "module.public_private_subnets.aws_instance.nat_instance",
            "module.public_private_subnets.aws_security_group.nat_instance",
            "module.public_private_subnets.aws_subnet.public",
            "module.public_private_subnets.data.aws_ami.nat_instance",
            "module.public_private_subnets.data.aws_availability_zones.default",
            "module.public_private_subnets.data.aws_eip.nat",
            "module.public_private_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_private_subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:network-acl/acl-0bad9aecb97f95cd5",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0bad9aecb97f95cd5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "203918842945",
            "subnet_ids": [
              "subnet-018c259d093563656",
              "subnet-074dcd6107539c8c2"
            ],
            "tags": {
              "Attributes": "public-private-private",
              "Name": "vitality-dev-app-public-private-private",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "public-private-private",
              "Name": "vitality-dev-app-public-private-private",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "vpc_id": "vpc-07681cd3054d9f772"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_private_subnets.aws_subnet.private",
            "module.public_private_subnets.data.aws_availability_zones.default",
            "module.public_private_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_private_subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:network-acl/acl-035dc708eff828bab",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-035dc708eff828bab",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "203918842945",
            "subnet_ids": [
              "subnet-08db065a30264ca79",
              "subnet-0f46822cfaf7d5ee9"
            ],
            "tags": {
              "Attributes": "public-private-public",
              "Name": "vitality-dev-app-public-private-public",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "public-private-public",
              "Name": "vitality-dev-app-public-private-public",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "vpc_id": "vpc-07681cd3054d9f772"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_private_subnets.aws_subnet.public",
            "module.public_private_subnets.data.aws_availability_zones.default",
            "module.public_private_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_private_subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private4_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3472789838",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0bad9aecb97f95cd5",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_private_subnets.aws_network_acl.private",
            "module.public_private_subnets.aws_subnet.private",
            "module.public_private_subnets.data.aws_availability_zones.default",
            "module.public_private_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_private_subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private4_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3396620699",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0bad9aecb97f95cd5",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_private_subnets.aws_network_acl.private",
            "module.public_private_subnets.aws_subnet.private",
            "module.public_private_subnets.data.aws_availability_zones.default",
            "module.public_private_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_private_subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public4_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2498365947",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-035dc708eff828bab",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_private_subnets.aws_network_acl.public",
            "module.public_private_subnets.aws_subnet.public",
            "module.public_private_subnets.data.aws_availability_zones.default",
            "module.public_private_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_private_subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public4_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1898250752",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-035dc708eff828bab",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_private_subnets.aws_network_acl.public",
            "module.public_private_subnets.aws_subnet.public",
            "module.public_private_subnets.data.aws_availability_zones.default",
            "module.public_private_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_private_subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0364bab632a511e831080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-033fb51789dd0f44e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0364bab632a511e83",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_private_subnets.aws_eip.default",
            "module.public_private_subnets.aws_eip_association.nat_instance",
            "module.public_private_subnets.aws_instance.nat_instance",
            "module.public_private_subnets.aws_nat_gateway.default",
            "module.public_private_subnets.aws_route_table.private",
            "module.public_private_subnets.aws_security_group.nat_instance",
            "module.public_private_subnets.aws_subnet.public",
            "module.public_private_subnets.data.aws_ami.nat_instance",
            "module.public_private_subnets.data.aws_availability_zones.default",
            "module.public_private_subnets.data.aws_eip.nat",
            "module.public_private_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0da36ea8d9376f7711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0485fd3999e1c7d5e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0da36ea8d9376f771",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_private_subnets.aws_eip.default",
            "module.public_private_subnets.aws_eip_association.nat_instance",
            "module.public_private_subnets.aws_instance.nat_instance",
            "module.public_private_subnets.aws_nat_gateway.default",
            "module.public_private_subnets.aws_route_table.private",
            "module.public_private_subnets.aws_security_group.nat_instance",
            "module.public_private_subnets.aws_subnet.public",
            "module.public_private_subnets.data.aws_ami.nat_instance",
            "module.public_private_subnets.data.aws_availability_zones.default",
            "module.public_private_subnets.data.aws_eip.nat",
            "module.public_private_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_private_subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e9ea34bd18152efa",
            "id": "r-rtb-0e8dd3caaa9f014e31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e8dd3caaa9f014e3",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_private_subnets.aws_route_table.public",
            "module.public_private_subnets.data.aws_availability_zones.default",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_private_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:route-table/rtb-0364bab632a511e83",
            "id": "rtb-0364bab632a511e83",
            "owner_id": "203918842945",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-033fb51789dd0f44e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "public-private-private",
              "Name": "vitality-dev-app-public-private-private-use1a",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "public-private-private",
              "Name": "vitality-dev-app-public-private-private-use1a",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-07681cd3054d9f772"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_private_subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:route-table/rtb-0da36ea8d9376f771",
            "id": "rtb-0da36ea8d9376f771",
            "owner_id": "203918842945",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0485fd3999e1c7d5e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "public-private-private",
              "Name": "vitality-dev-app-public-private-private-use1b",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "public-private-private",
              "Name": "vitality-dev-app-public-private-private-use1b",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-07681cd3054d9f772"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_private_subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_private_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:route-table/rtb-0e8dd3caaa9f014e3",
            "id": "rtb-0e8dd3caaa9f014e3",
            "owner_id": "203918842945",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e9ea34bd18152efa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "public-private-public",
              "Name": "vitality-dev-app-public-private-public",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "public-private-public",
              "Name": "vitality-dev-app-public-private-public",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-07681cd3054d9f772"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_private_subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_private_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa6494bcf45ee300",
            "route_table_id": "rtb-0364bab632a511e83",
            "subnet_id": "subnet-074dcd6107539c8c2"
          },
          "dependencies": [
            "module.public_private_subnets.aws_route_table.private",
            "module.public_private_subnets.aws_subnet.private",
            "module.public_private_subnets.data.aws_availability_zones.default",
            "module.public_private_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa093401e02c3886",
            "route_table_id": "rtb-0da36ea8d9376f771",
            "subnet_id": "subnet-018c259d093563656"
          },
          "dependencies": [
            "module.public_private_subnets.aws_route_table.private",
            "module.public_private_subnets.aws_subnet.private",
            "module.public_private_subnets.data.aws_availability_zones.default",
            "module.public_private_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_private_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f3aef3f1949c109",
            "route_table_id": "rtb-0e8dd3caaa9f014e3",
            "subnet_id": "subnet-0f46822cfaf7d5ee9"
          },
          "dependencies": [
            "module.public_private_subnets.aws_route_table.public",
            "module.public_private_subnets.aws_subnet.public",
            "module.public_private_subnets.data.aws_availability_zones.default",
            "module.public_private_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b38f7a210cf71179",
            "route_table_id": "rtb-0e8dd3caaa9f014e3",
            "subnet_id": "subnet-08db065a30264ca79"
          },
          "dependencies": [
            "module.public_private_subnets.aws_route_table.public",
            "module.public_private_subnets.aws_subnet.public",
            "module.public_private_subnets.data.aws_availability_zones.default",
            "module.public_private_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_private_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:subnet/subnet-074dcd6107539c8c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074dcd6107539c8c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "203918842945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public-private-private",
              "Name": "vitality-dev-app-public-private-private-use1a",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "public-private-private",
              "Name": "vitality-dev-app-public-private-private-use1a",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-07681cd3054d9f772"
          },
          "dependencies": [
            "module.public_private_subnets.data.aws_availability_zones.default",
            "module.public_private_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:subnet/subnet-018c259d093563656",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018c259d093563656",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "203918842945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public-private-private",
              "Name": "vitality-dev-app-public-private-private-use1b",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "public-private-private",
              "Name": "vitality-dev-app-public-private-private-use1b",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-07681cd3054d9f772"
          },
          "dependencies": [
            "module.public_private_subnets.data.aws_availability_zones.default",
            "module.public_private_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_private_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:subnet/subnet-0f46822cfaf7d5ee9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f46822cfaf7d5ee9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "203918842945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public-private-public",
              "Name": "vitality-dev-app-public-private-public-use1a",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "public-private-public",
              "Name": "vitality-dev-app-public-private-public-use1a",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-07681cd3054d9f772"
          },
          "dependencies": [
            "module.public_private_subnets.data.aws_availability_zones.default",
            "module.public_private_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:subnet/subnet-08db065a30264ca79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08db065a30264ca79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "203918842945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public-private-public",
              "Name": "vitality-dev-app-public-private-public-use1b",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "public-private-public",
              "Name": "vitality-dev-app-public-private-public-use1b",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-07681cd3054d9f772"
          },
          "dependencies": [
            "module.public_private_subnets.data.aws_availability_zones.default",
            "module.public_private_subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.sg_postgres",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cbd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:security-group/sg-034beca474a96249d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-034beca474a96249d",
            "ingress": [],
            "name": "vitality-dev-app-postgres--LlQB-20250321025341042200000002",
            "name_prefix": "vitality-dev-app-postgres--LlQB-",
            "owner_id": "203918842945",
            "revoke_rules_on_delete": false,
            "tags": {
              "Attributes": "postgres",
              "Name": "vitality-dev-app-postgres",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "postgres",
              "Name": "vitality-dev-app-postgres",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-07681cd3054d9f772"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_postgres.random_id.rule_change_forces_new_security_group",
            "module.sg_primary.aws_security_group.cbd",
            "module.sg_primary.aws_security_group.default",
            "module.sg_primary.random_id.rule_change_forces_new_security_group",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg_postgres",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "keyed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "_allow_all_egress_",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-685035081",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-034beca474a96249d",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_postgres.aws_security_group.cbd",
            "module.sg_postgres.random_id.rule_change_forces_new_security_group",
            "module.sg_primary.aws_security_group.cbd",
            "module.sg_primary.aws_security_group.default",
            "module.sg_primary.random_id.rule_change_forces_new_security_group",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "_m[0]#postgres#sg#0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Postgres access from trusted security groups",
            "from_port": 5432,
            "id": "sgrule-3403041397",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-034beca474a96249d",
            "security_group_rule_id": "sgr-038a870a2efbf80ce",
            "self": false,
            "source_security_group_id": "sg-032d70a41a60b1fad",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_postgres.aws_security_group.cbd",
            "module.sg_postgres.random_id.rule_change_forces_new_security_group",
            "module.sg_primary.aws_security_group.cbd",
            "module.sg_primary.aws_security_group.default",
            "module.sg_primary.random_id.rule_change_forces_new_security_group",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg_primary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cbd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:security-group/sg-032d70a41a60b1fad",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-032d70a41a60b1fad",
            "ingress": [],
            "name": "vitality-dev-app-primary--oEtj-20250321025336443300000001",
            "name_prefix": "vitality-dev-app-primary--oEtj-",
            "owner_id": "203918842945",
            "revoke_rules_on_delete": false,
            "tags": {
              "Attributes": "primary",
              "Name": "vitality-dev-app-primary",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Attributes": "primary",
              "Name": "vitality-dev-app-primary",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-07681cd3054d9f772"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_primary.random_id.rule_change_forces_new_security_group",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg_primary",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "keyed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "HTTP",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTP from inside the security group",
            "from_port": 80,
            "id": "sgrule-2556604787",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-032d70a41a60b1fad",
            "security_group_rule_id": "sgr-0b8b6d5ee22ec2767",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_primary.aws_security_group.cbd",
            "module.sg_primary.random_id.rule_change_forces_new_security_group",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "_allow_all_egress_",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3283511356",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-032d70a41a60b1fad",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_primary.aws_security_group.cbd",
            "module.sg_primary.random_id.rule_change_forces_new_security_group",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ssh",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH from anywhere",
            "from_port": 22,
            "id": "sgrule-1759525371",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-032d70a41a60b1fad",
            "security_group_rule_id": "sgr-083c733b86c0ace98",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_primary.aws_security_group.cbd",
            "module.sg_primary.random_id.rule_change_forces_new_security_group",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:security-group/sg-02fea1576a0f9efad",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02fea1576a0f9efad",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "203918842945",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vitality-dev-app-default",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "vitality-dev-app-default",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "vpc_id": "vpc-07681cd3054d9f772"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:internet-gateway/igw-0e9ea34bd18152efa",
            "id": "igw-0e9ea34bd18152efa",
            "owner_id": "203918842945",
            "tags": {
              "Name": "vitality-dev-app",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "vitality-dev-app",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "vpc_id": "vpc-07681cd3054d9f772"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918842945:vpc/vpc-07681cd3054d9f772",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b3af65977a1c6d63",
            "default_route_table_id": "rtb-0c717b6e887b87db9",
            "default_security_group_id": "sg-02fea1576a0f9efad",
            "dhcp_options_id": "dopt-0675ed68aee56a836",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07681cd3054d9f772",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c717b6e887b87db9",
            "owner_id": "203918842945",
            "tags": {
              "Name": "vitality-dev-app",
              "Namespace": "vitality",
              "Stage": "dev"
            },
            "tags_all": {
              "Name": "vitality-dev-app",
              "Namespace": "vitality",
              "Stage": "dev"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}